<?xml version="1.0" encoding="utf-8"?>
<!-- The beacon action editor fragment -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/beacon_action_editor"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lightgray"
        android:gravity="left"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:text="@string/txt_beacon_action"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_name"
                android:text="@string/lbl_beacon_action_name_required"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/beacon_action_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_distance"
                android:text="@string/lbl_beacon_action_distance"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/beacon_action_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_content_type"
                android:text="@string/lbl_beacon_action_content_type_required"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/beacon_action_content_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_content_type_txt"
                android:text="@string/lbl_beacon_action_content_url_required"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/beacon_action_content_type_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/beacon_action_content_type_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_notification_message"
                android:text="@string/lbl_beacon_action_notification_message_required"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/beacon_action_notification_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:labelFor="@+id/beacon_action_notification_icon"
                android:text="@string/lbl_beacon_action_notification_icon_required"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/beacon_action_notification_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="20dp"
        android:text="@string/info_required_fields"
        android:textSize="12sp" />

</LinearLayout>