<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/selector_beacon_list_item"
    android:orientation="vertical"
    android:id="@+id/row_beacon"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/lbl_beacon_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beaconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:text="@string/lbl_beacon_uuid"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beaconUuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="14sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:text="@string/lbl_beacon_major_id"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beaconMajorId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:text="@string/lbl_beacon_minor_id"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/beaconMinorId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>